HTML: Remove unused classes across all frontend

--- a/catalog/view/theme/helium/template/account/account.twig
+++ b/catalog/view/theme/helium/template/account/account.twig
@@ -1,8 +1,8 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="account-account" class="container">
+<main id="account-account">
   {% if success %}
-    <div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> {{ success }}</div>
+    <div class="alert alert-success alert-dismissible"><i class="icon-info"></i></i> {{ success }}</div>
   {% endif %}
   {{ content_top }}
   <h2>{{ text_my_account }}</h2>
