--- a/catalog/view/theme/helium/template/blog/menu.twig
+++ b/catalog/view/theme/helium/template/blog/menu.twig
@@ -1,7 +1,7 @@
 	<div class="pull-left">
 	<div class="btn-group">
     <button class="btn btn-link dropdown-toggle" data-toggle="dropdown">
-	<i class="fa fa-book"></i> <span class="hidden-xs hidden-sm hidden-md">{{ text_blog }}</span> <i class="fa fa-caret-down"></i>
+	<i class="fa fa-book"></i> <span class="hidden-xs hidden-sm hidden-md">{{ text_blog }}</span> <i class="icon-chevron-down"></i>
 	</button>
 	<ul class="dropdown-menu">
 	{% for category in categories %}
