--- a/catalog/view/theme/helium/template/checkout/login.twig
+++ b/catalog/view/theme/helium/template/checkout/login.twig
@@ -28,12 +28,12 @@
     <h2>{{ text_returning_customer }}</h2>
     <p>{{ text_i_am_returning_customer }}</p>
     <div class="form-group">
-      <label class="control-label" for="input-email">{{ entry_email }}</label>
-      <input type="text" name="email" value="" placeholder="{{ entry_email }}" id="input-email" class="form-control" />
+      <label for="input-email">{{ entry_email }}</label>
+      <input type="text" name="email" value="" placeholder="{{ entry_email }}" id="input-email" />
     </div>
     <div class="form-group">
-      <label class="control-label" for="input-password">{{ entry_password }}</label>
-      <input type="password" name="password" value="" placeholder="{{ entry_password }}" id="input-password" class="form-control" />
+      <label for="input-password">{{ entry_password }}</label>
+      <input type="password" name="password" value="" placeholder="{{ entry_password }}" id="input-password" />
     </div>
       <button type="button" id="button-login" class="primary">{{ button_login }}</button>
       <a class="button" href="{{ forgotten }}">{{ text_forgotten }}</a>
