--- a/catalog/view/theme/helium/template/checkout/payment_method.twig
+++ b/catalog/view/theme/helium/template/checkout/payment_method.twig
@@ -5,7 +5,7 @@
   <form action="index.php?route=checkout/payment_method/save" method="post" id="payment_method">
   <p>{{ text_payment_method }}</p>
   {% for payment_method in payment_methods %}
-  <div class="radio">
+  <div class="form-control">
     <label>{% if payment_method.code == code or not code %}
       {% set code = payment_method.code %}
       <input type="radio" name="payment_method" value="{{ payment_method.code }}" checked="checked" />
@@ -32,13 +32,15 @@
       <input type="checkbox" name="agree" value="1" />
       {% endif %}
       &nbsp;
-      <input type="button" value="{{ button_continue }}" id="button-payment-method" data-loading-text="{{ text_loading }}" class="btn btn-primary" />
+      <button type="button" value="{{ button_continue }}" id="button-payment-method" class="primary">{{ button_continue }}</button>
+
     </div>
   </div>
   {% else %}
   <div class="buttons">
     <div class="pull-right">
-      <input type="button" value="{{ button_continue }}" id="button-payment-method" data-loading-text="{{ text_loading }}" class="btn btn-primary" />
+      <button type="button" value="{{ button_continue }}" id="button-payment-method" class="primary">{{ button_continue }}</button>
+
     </div>
   </div>
   {% endif %}
