--- a/catalog/view/theme/helium/template/product/manufacturer_list.twig
+++ b/catalog/view/theme/helium/template/product/manufacturer_list.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="product-manufacturer" class="container">
+<main id="product-manufacturer">
 
   <div class="row">
   {{ content_top }}
