--- a/catalog/view/theme/helium/template/product/product.twig
+++ b/catalog/view/theme/helium/template/product/product.twig
@@ -116,7 +116,7 @@
 
       {# Кнопки купить #}
       <div class="form-group">
-        <label class="control-label" for="input-quantity">{{ entry_qty }}</label>
+        <label for="input-quantity">{{ entry_qty }}</label>
         <input 
           type="number" 
           name="quantity" 
