--- a/catalog/view/theme/helium/template/account/download.twig
+++ b/catalog/view/theme/helium/template/account/download.twig
@@ -24,7 +24,7 @@
           <td class="text-left">{{ download.name }}</td>
           <td class="text-left">{{ download.size }}</td>
           <td class="text-left">{{ download.date_added }}</td>
-          <td><a href="{{ download.href }}" data-toggle="tooltip" title="{{ button_download }}" class="btn btn-primary"><i class="fa fa-cloud-download"></i></a></td>
+          <td><a href="{{ download.href }}" data-toggle="tooltip" title="{{ button_download }}" class="primary"><i class="fa fa-cloud-download"></i></a></td>
         </tr>
         {% endfor %}
         </tbody>
@@ -37,7 +37,7 @@
   {% else %}
     <p>{{ text_empty }}</p>
   {% endif %}
-  
+
   {{ content_bottom }}
   <div class="pull-right"><a href="{{ continue }}" class="primary">{{ button_continue }}</a></div>
 </main>
