--- a/catalog/view/theme/helium/template/account/login.twig
+++ b/catalog/view/theme/helium/template/account/login.twig
@@ -1,21 +1,21 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="account-login" class="container">
+<main id="account-login">
   {% if success %}
   <div class="alert alert-success alert-dismissible"><i class="icon-info"></i> {{ success }}</div>
   {% endif %}
   {% if error_warning %}
   <div class="alert alert-danger alert-dismissible"><i class="icon-alert"></i> {{ error_warning }}</div>
   {% endif %}
-  <div class="row">{{ column_left }}
-    <div id="content" class="{{ class }}">{{ content_top }}
+  {{ column_left }}
+    {{ content_top }}
       <div class="row">
         <div class="col-sm-6">
           <div class="well">
             <h2>{{ text_new_customer }}</h2>
             <p><strong>{{ text_register }}</strong></p>
             <p>{{ text_register_account }}</p>
-            <a href="{{ register }}" class="btn btn-primary">{{ button_continue }}</a></div>
+            <a href="{{ register }}" class="primary">{{ button_continue }}</a></div>
         </div>
         <div class="col-sm-6">
           <div class="well">
@@ -23,14 +23,14 @@
             <p><strong>{{ text_i_am_returning_customer }}</strong></p>
             <form action="{{ action }}" method="post" enctype="multipart/form-data">
               <div class="form-group">
-                <label class="control-label" for="input-email">{{ entry_email }}</label>
-                <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" class="form-control" />
+                <label for="input-email">{{ entry_email }}</label>
+                <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" />
               </div>
               <div class="form-group">
-                <label class="control-label" for="input-password">{{ entry_password }}</label>
-                <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" />
+                <label for="input-password">{{ entry_password }}</label>
+                <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" />
                 <a href="{{ forgotten }}">{{ text_forgotten }}</a></div>
-              <input type="submit" value="{{ button_login }}" class="btn btn-primary" />
+              <button type="submit" class="primary">{{ button_login }}</button>
               {% if redirect %}
               <input type="hidden" name="redirect" value="{{ redirect }}" />
               {% endif %}
@@ -38,7 +38,7 @@
           </div>
         </div>
       </div>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
+      {{ content_bottom }}
+    {{ column_right }}
 </main>
 {{ footer }}
