--- a/catalog/view/theme/helium/template/account/newsletter.twig
+++ b/catalog/view/theme/helium/template/account/newsletter.twig
@@ -1,51 +1,32 @@
 {{ header }}
-<div id="account-newsletter" class="container">
-  <ul class="breadcrumb">
-    {% for breadcrumb in breadcrumbs %}
-    <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-    {% endfor %}
-  </ul>
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
-      <h1>{{ heading_title }}</h1>
-      <form action="{{ action }}" method="post" enctype="multipart/form-data" class="form-horizontal">
-        <fieldset>
-          <div class="form-group">
-            <label class="col-sm-2 control-label">{{ entry_newsletter }}</label>
-            <div class="col-sm-10">
-              {% if newsletter %}
-              <label class="radio-inline">
-                <input type="radio" name="newsletter" value="1" checked="checked" />
-                {{ text_yes }} </label>
-              <label class="radio-inline">
-                <input type="radio" name="newsletter" value="0" />
-                {{ text_no }}</label>
-              {% else %}
-              <label class="radio-inline">
-                <input type="radio" name="newsletter" value="1" />
-                {{ text_yes }} </label>
-              <label class="radio-inline">
-                <input type="radio" name="newsletter" value="0" checked="checked" />
-                {{ text_no }}</label>
-              {% endif %}
-            </div>
-          </div>
-        </fieldset>
-        <div class="buttons clearfix">
-          <div class="pull-left"><a href="{{ back }}" class="btn btn-default">{{ button_back }}</a></div>
-          <div class="pull-right">
-            <input type="submit" value="{{ button_continue }}" class="btn btn-primary" />
-          </div>
-        </div>
-      </form>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
-</div>
+{% include 'helium/template/common/breadcrumbs.twig' %}
+<main id="account-newsletter">
+  <h1>{{ heading_title }}</h1>
+  {{ content_top }}
+  <form action="{{ action }}" method="post" enctype="multipart/form-data">
+    <fieldset>
+      <legend>{{ entry_newsletter }}</legend>
+      <div class="form-control">
+        {% if newsletter %}
+          <input type="radio" name="newsletter" value="1" checked="checked" />
+          <label>{{ text_yes }} </label>
+          <input type="radio" name="newsletter" value="0" />
+          <label>{{ text_no }}</label>
+        {% else %}
+          <input type="radio" name="newsletter" value="1" />
+          <label>{{ text_yes }} </label>
+          <input type="radio" name="newsletter" value="0" checked="checked" />
+          <label>{{ text_no }}</label>
+        {% endif %}
+      </div>
+    </fieldset>
+    <div class="buttons">
+      <a href="{{ back }}" class="button">{{ button_back }}</a>
+      <button type="submit" class="primary">{{ button_continue }}</button>
+    </div>
+  </form>
+  {{ content_bottom }}
+</main>
+{{ column_left }}
+{{ column_right }}
 {{ footer }}
