--- a/catalog/view/theme/helium/template/account/password.twig
+++ b/catalog/view/theme/helium/template/account/password.twig
@@ -1,36 +1,26 @@
 {{ header }}
-<div id="account-password" class="container">
-  <ul class="breadcrumb">
-    {% for breadcrumb in breadcrumbs %}
-    <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-    {% endfor %}
-  </ul>
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
+{% include 'helium/template/common/breadcrumbs.twig' %}
+<main id="account-password">
+  {{ column_left }}
+
+    {{ content_top }}
       <h1>{{ heading_title }}</h1>
-      <form action="{{ action }}" method="post" enctype="multipart/form-data" class="form-horizontal">
+      <form action="{{ action }}" method="post" enctype="multipart/form-data" >
         <fieldset>
           <legend>{{ text_password }}</legend>
           <div class="form-group required">
-            <label class="col-sm-2 control-label" for="input-password">{{ entry_password }}</label>
+            <label for="input-password">{{ entry_password }}</label>
             <div class="col-sm-10">
-              <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" />
+              <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" />
               {% if error_password %}
               <div class="text-danger">{{ error_password }}</div>
               {% endif %}
             </div>
           </div>
           <div class="form-group required">
-            <label class="col-sm-2 control-label" for="input-confirm">{{ entry_confirm }}</label>
+            <label for="input-confirm">{{ entry_confirm }}</label>
             <div class="col-sm-10">
-              <input type="password" name="confirm" value="{{ confirm }}" placeholder="{{ entry_confirm }}" id="input-confirm" class="form-control" />
+              <input type="password" name="confirm" value="{{ confirm }}" placeholder="{{ entry_confirm }}" id="input-confirm" />
               {% if error_confirm %}
               <div class="text-danger">{{ error_confirm }}</div>
               {% endif %}
@@ -38,13 +28,13 @@
           </div>
         </fieldset>
         <div class="buttons clearfix">
-          <div class="pull-left"><a href="{{ back }}" class="btn btn-default">{{ button_back }}</a></div>
+          <div class="pull-left"><a href="{{ back }}" class="button">{{ button_back }}</a></div>
           <div class="pull-right">
-            <input type="submit" value="{{ button_continue }}" class="btn btn-primary" />
+            <button type="submit" class="primary">{{ button_continue }}</button>
           </div>
         </div>
       </form>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
-</div>
+      {{ content_bottom }}
+    {{ column_right }}
+</main>
 {{ footer }}
