--- a/catalog/view/theme/helium/template/account/recurring_info.twig
+++ b/catalog/view/theme/helium/template/account/recurring_info.twig
@@ -1,19 +1,10 @@
 {{ header }}
-<div id="account-recurring" class="container">
-  <ul class="breadcrumb">
-    {% for breadcrumb in breadcrumbs %}
-    <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-    {% endfor %}
-  </ul>
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
+{% include 'helium/template/common/breadcrumbs.twig' %}
+<main id="account-recurring">
+
+  {{ column_left }}
+
+    {{ content_top }}
       <h2>{{ heading_title }}</h2>
       <div class="table-responsive">
         <table class="table table-bordered table-hover">
@@ -78,7 +69,7 @@
           
         </table>
       </div>
-      {{ recurring }}{{ content_bottom }}</div>
-    {{ column_right }}</div>
+      {{ recurring }}{{ content_bottom }}
+    {{ column_right }}
 </div>
 {{ footer }} 
