--- a/catalog/view/theme/helium/template/account/return_list.twig
+++ b/catalog/view/theme/helium/template/account/return_list.twig
@@ -1,19 +1,10 @@
 {{ header }}
-<div id="account-return" class="container">
-  <ul class="breadcrumb">
-    {% for breadcrumb in breadcrumbs %}
-    <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-    {% endfor %}
-  </ul>
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
+{% include 'helium/template/common/breadcrumbs.twig' %}
+<main id="account-return">
+
+  {{ column_left }}
+
+    {{ content_top }}
       <h1>{{ heading_title }}</h1>
       {% if returns %}
       <div class="table-responsive">
@@ -52,9 +43,9 @@
       <p>{{ text_empty }}</p>
       {% endif %}
       <div class="buttons clearfix">
-        <div class="pull-right"><a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a></div>
+        <div class="pull-right"><a href="{{ continue }}" class="primary">{{ button_continue }}</a></div>
       </div>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
+      {{ content_bottom }}
+    {{ column_right }}
 </div>
 {{ footer }} 
