--- a/catalog/view/theme/helium/template/account/tracking.twig
+++ b/catalog/view/theme/helium/template/account/tracking.twig
@@ -1,47 +1,38 @@
 {{ header }}
-<div id="account-tracking" class="container">
-  <ul class="breadcrumb">
-    {% for breadcrumb in breadcrumbs %}
-    <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-    {% endfor %}
-  </ul>
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
+{% include 'helium/template/common/breadcrumbs.twig' %}
+<main id="account-tracking">
+
+  {{ column_left }}
+
+    {{ content_top }}
       <h1>{{ heading_title }}</h1>
       <p>{{ text_description }}</p>
-      <form class="form-horizontal">
+      <form>
         <div class="form-group">
-          <label class="col-sm-2 control-label" for="input-code">{{ entry_code }}</label>
+          <label for="input-code">{{ entry_code }}</label>
           <div class="col-sm-10">
             <textarea cols="40" rows="5" placeholder="{{ entry_code }}" id="input-code" class="form-control">{{ code }}</textarea>
           </div>
         </div>
         <div class="form-group">
-          <label class="col-sm-2 control-label" for="input-generator"><span data-toggle="tooltip" title="{{ help_generator }}">{{ entry_generator }}</span></label>
+          <label for="input-generator"><span data-toggle="tooltip" title="{{ help_generator }}">{{ entry_generator }}</span></label>
           <div class="col-sm-10">
-            <input type="text" name="product" value="" placeholder="{{ entry_generator }}" id="input-generator" class="form-control" />
+            <input type="text" name="product" value="" placeholder="{{ entry_generator }}" id="input-generator" />
           </div>
         </div>
         <div class="form-group">
-          <label class="col-sm-2 control-label" for="input-link">{{ entry_link }}</label>
+          <label for="input-link">{{ entry_link }}</label>
           <div class="col-sm-10">
             <textarea name="link" cols="40" rows="5" placeholder="{{ entry_link }}" id="input-link" class="form-control"></textarea>
           </div>
         </div>
       </form>
       <div class="buttons clearfix">
-        <div class="pull-right"><a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a></div>
+        <div class="pull-right"><a href="{{ continue }}" class="primary">{{ button_continue }}</a></div>
       </div>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
-</div>
+      {{ content_bottom }}
+    {{ column_right }}
+</main>
 <script type="text/javascript"><!--
 $('input[name=\'product\']').autocomplete({
 	'source': function(request, response) {
