--- a/catalog/view/theme/helium/template/account/transaction.twig
+++ b/catalog/view/theme/helium/template/account/transaction.twig
@@ -1,19 +1,10 @@
 {{ header }}
-<div id="account-transaction" class="container">
-  <ul class="breadcrumb">
-    {% for breadcrumb in breadcrumbs %}
-    <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-    {% endfor %}
-  </ul>
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
+{% include 'helium/template/common/breadcrumbs.twig' %}
+<main id="account-transaction">
+
+  {{ column_left }}
+
+    {{ content_top }}
       <h1>{{ heading_title }}</h1>
       <p>{{ text_total }} <b>{{ total }}</b>.</p>
       <div class="table-responsive">
@@ -49,9 +40,9 @@
         <div class="col-sm-6 text-right">{{ results }}</div>
       </div>
       <div class="buttons clearfix">
-        <div class="pull-right"><a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a></div>
+        <div class="pull-right"><a href="{{ continue }}" class="primary">{{ button_continue }}</a></div>
       </div>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
-</div>
+      {{ content_bottom }}
+    {{ column_right }}
+</main>
 {{ footer }}
