--- a/catalog/view/theme/helium/template/affiliate/login.twig
+++ b/catalog/view/theme/helium/template/affiliate/login.twig
@@ -1,25 +1,16 @@
 {{ header }}
-<div id="affiliate-login" class="container">
-  <ul class="breadcrumb">
-    {% for breadcrumb in breadcrumbs %}
-    <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-    {% endfor %}
-  </ul>
+{% include 'helium/template/common/breadcrumbs.twig' %}
+<main id="affiliate-login">
+
   {% if success %}
-  <div class="alert alert-success alert-dismissible"><i class="fa fa-check-circle"></i> {{ success }}</div>
+  <div class="alert alert-success alert-dismissible"><i class="icon-info"></i></i> {{ success }}</div>
   {% endif %}
   {% if error_warning %}
   <div class="alert alert-danger alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
   {% endif %}
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
+  {{ column_left }}
+
+    {{ content_top }}
       <h1>{{ heading_title }}</h1>
       {{ text_description }}
       <div class="row">
@@ -27,7 +18,7 @@
           <div class="well">
             <h2>{{ text_new_affiliate }}</h2>
             <p>{{ text_register_account }}</p>
-            <a class="btn btn-primary" href="{{ register }}">{{ button_continue }}</a></div>
+            <a class="primary" href="{{ register }}">{{ button_continue }}</a></div>
         </div>
         <div class="col-sm-6">
           <div class="well">
@@ -35,14 +26,14 @@
             <p><strong>{{ text_i_am_returning_affiliate }}</strong></p>
             <form action="{{ action }}" method="post" enctype="multipart/form-data">
               <div class="form-group">
-                <label class="control-label" for="input-email">{{ entry_email }}</label>
-                <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" class="form-control" />
+                <label for="input-email">{{ entry_email }}</label>
+                <input type="text" name="email" value="{{ email }}" placeholder="{{ entry_email }}" id="input-email" />
               </div>
               <div class="form-group">
-                <label class="control-label" for="input-password">{{ entry_password }}</label>
-                <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" class="form-control" />
+                <label for="input-password">{{ entry_password }}</label>
+                <input type="password" name="password" value="{{ password }}" placeholder="{{ entry_password }}" id="input-password" />
                 <a href="{{ forgotten }}">{{ text_forgotten }}</a> </div>
-              <input type="submit" value="{{ button_login }}" class="btn btn-primary" />
+              <button type="submit" class="primary">{{ button_login }}</button>
               {% if redirect %}
               <input type="hidden" name="redirect" value="{{ redirect }}" />
               {% endif %}
@@ -50,7 +41,7 @@
           </div>
         </div>
       </div>
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
+      {{ content_bottom }}
+    {{ column_right }}
 </div>
 {{ footer }}
