--- a/catalog/view/theme/helium/template/blog/category.twig
+++ b/catalog/view/theme/helium/template/blog/category.twig
@@ -1,7 +1,7 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 {{ content_top }}
-<main id="blog-category" class="container">
+<main id="blog-category">
   <h1>{{ heading_title }}</h1>
   {% if thumb or description %}
       {% if thumb %}
@@ -31,7 +31,7 @@
   {% else %}
     <p>{{ text_empty }}</p>
     <div class="buttons">
-      <div class="pull-right"><a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a></div>
+      <div class="pull-right"><a href="{{ continue }}" class="primary">{{ button_continue }}</a></div>
     </div>
   {% endif %}
 </main>
