--- a/catalog/view/theme/helium/template/checkout/guest.twig
+++ b/catalog/view/theme/helium/template/checkout/guest.twig
@@ -7,12 +7,12 @@
         <label>{{ entry_customer_group }}</label>
         {% for customer_group in customer_groups %}
           {% if customer_group.customer_group_id == customer_group_id %}
-          <div class="radio">
+          <div class="form-control">
             <label>{{ customer_group.name }}</label>
             <input type="radio" name="customer_group_id" value="{{ customer_group.customer_group_id }}" checked="checked" />
           </div>
           {% else %}
-          <div class="radio">
+          <div class="form-control">
             <label for="">{{ customer_group.name }}</label>
             <input type="radio" name="customer_group_id" value="{{ customer_group.customer_group_id }}" />
           </div>
@@ -115,7 +115,7 @@
             <label>{{ custom_field.name }}</label>
             <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
               {% for custom_field_value in custom_field.custom_field_value %}
-                <div class="checkbox">
+                <div class="form-control">
                   {% if guest_custom_field[custom_field.custom_field_id] and  custom_field_value.custom_field_value_id in guest_custom_field[custom_field.custom_field_id] %}
                     <input type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" checked="checked" />
                     <label>{{ custom_field_value.name }}</label>
@@ -154,7 +154,7 @@
           <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
             <label>{{ custom_field.name }}</label>
             <br />
-            <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}" data-loading-text="{{ text_loading }}" class="btn btn-default"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+            <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
             <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% endif %}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
           </div>
           {% endif %}
@@ -325,7 +325,7 @@
             <label>{{ custom_field.name }}</label>
             <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
               {% for custom_field_value in custom_field.custom_field_value %}
-                <div class="radio"> 
+                <div class="form-control"> 
                   {% if guest_custom_field[custom_field.custom_field_id] and custom_field_value.custom_field_value_id == guest_custom_field[custom_field.custom_field_id] %}
                     <input type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" checked="checked" />
                     <label>{{ custom_field_value.name }}</label>
@@ -344,7 +344,7 @@
               <label>{{ custom_field.name }}</label>
               <div id="input-payment-custom-field{{ custom_field.custom_field_id }}"> 
                 {% for custom_field_value in custom_field.custom_field_value %}
-                  <div class="checkbox"> 
+                  <div class="form-control"> 
                     {% if guest_custom_field[custom_field.custom_field_id] and custom_field_value.custom_field_value_id in guest_custom_field[custom_field.custom_field_id] %}
                       <input type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" checked="checked" />
                       <label>{{ custom_field_value.name }}</label>
@@ -376,7 +376,7 @@
             <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
               <label>{{ custom_field.name }}</label>
               <br />
-              <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}" data-loading-text="{{ text_loading }}" class="btn btn-default"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+              <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
               <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if guest_custom_field[custom_field.custom_field_id] %} {{ guest_custom_field[custom_field.custom_field_id] }} {% endif %}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
             </div>
           {% endif %}
@@ -412,20 +412,18 @@
       {% endfor %}
     </fieldset>
     {{ captcha }}
-    <div class="full-width">
-      <div class="form-group">
-        {% if shipping_required %}
-          {% if shipping_address %}
-            <input id="shipping_address_guest" type="checkbox" name="shipping_address" value="1" checked="checked" />
-          {% else %}
-            <input id="shipping_address_guest" type="checkbox" name="shipping_address" value="1" />
-          {% endif %}
-          <label for="shipping_address_guest"> {{ entry_shipping }}</label>
+    <div class="form-control">
+      {% if shipping_required %}
+        {% if shipping_address %}
+          <input id="shipping_address_guest" type="checkbox" name="shipping_address" value="1" checked="checked" />
+        {% else %}
+          <input id="shipping_address_guest" type="checkbox" name="shipping_address" value="1" />
         {% endif %}
-      </div>
-      <button type="submit" id="button-guest" form="guest_checkout" class="primary">{{ button_continue }}</button>
+        <label for="shipping_address_guest"> {{ entry_shipping }}</label>
+      {% endif %}
     </div>
-    </form>
+      <button type="submit" id="button-guest" form="guest_checkout" class="primary">{{ button_continue }}</button>
+  </form>
 
 
 
