--- a/catalog/view/theme/helium/template/checkout/guest_shipping.twig
+++ b/catalog/view/theme/helium/template/checkout/guest_shipping.twig
@@ -1,36 +1,36 @@
-<form action="index.php?route=checkout/guest_shipping/save" method="post" class="form-horizontal" id="guest_shipping">
+<form action="index.php?route=checkout/guest_shipping/save" method="post"  id="guest_shipping">
   <fieldset id="account">
     <legend>{{ text_your_address }}</legend>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-shipping-firstname">{{ entry_firstname }}</label>
-      <input type="text" name="firstname" value="{{ firstname }}" placeholder="{{ entry_firstname }}" id="input-shipping-firstname" class="form-control" />
+      <label for="input-shipping-firstname">{{ entry_firstname }}</label>
+      <input type="text" name="firstname" value="{{ firstname }}" placeholder="{{ entry_firstname }}" id="input-shipping-firstname" />
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-shipping-lastname">{{ entry_lastname }}</label>
-      <input type="text" name="lastname" value="{{ lastname }}" placeholder="{{ entry_lastname }}" id="input-shipping-lastname" class="form-control" />
+      <label for="input-shipping-lastname">{{ entry_lastname }}</label>
+      <input type="text" name="lastname" value="{{ lastname }}" placeholder="{{ entry_lastname }}" id="input-shipping-lastname" />
       </div>
     <div class="form-group">
-      <label class="col-sm-2 control-label" for="input-shipping-company">{{ entry_company }}</label>
-      <input type="text" name="company" value="{{ company }}" placeholder="{{ entry_company }}" id="input-shipping-company" class="form-control" />
+      <label for="input-shipping-company">{{ entry_company }}</label>
+      <input type="text" name="company" value="{{ company }}" placeholder="{{ entry_company }}" id="input-shipping-company" />
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-shipping-address-1">{{ entry_address_1 }}</label>
-      <input type="text" name="address_1" value="{{ address_1 }}" placeholder="{{ entry_address_1 }}" id="input-shipping-address-1" class="form-control" />
+      <label for="input-shipping-address-1">{{ entry_address_1 }}</label>
+      <input type="text" name="address_1" value="{{ address_1 }}" placeholder="{{ entry_address_1 }}" id="input-shipping-address-1" />
     </div>
     <div class="form-group">
-      <label class="col-sm-2 control-label" for="input-shipping-address-2">{{ entry_address_2 }}</label>
-      <input type="text" name="address_2" value="{{ address_2 }}" placeholder="{{ entry_address_2 }}" id="input-shipping-address-2" class="form-control" />
+      <label for="input-shipping-address-2">{{ entry_address_2 }}</label>
+      <input type="text" name="address_2" value="{{ address_2 }}" placeholder="{{ entry_address_2 }}" id="input-shipping-address-2" />
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-shipping-city">{{ entry_city }}</label>
-      <input type="text" name="city" value="{{ city }}" placeholder="{{ entry_city }}" id="input-shipping-city" class="form-control" />
+      <label for="input-shipping-city">{{ entry_city }}</label>
+      <input type="text" name="city" value="{{ city }}" placeholder="{{ entry_city }}" id="input-shipping-city" />
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-shipping-postcode">{{ entry_postcode }}</label>
-      <input type="text" name="postcode" value="{{ postcode }}" placeholder="{{ entry_postcode }}" id="input-shipping-postcode" class="form-control" />
+      <label for="input-shipping-postcode">{{ entry_postcode }}</label>
+      <input type="text" name="postcode" value="{{ postcode }}" placeholder="{{ entry_postcode }}" id="input-shipping-postcode" />
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-shipping-country">{{ entry_country }}</label>
+      <label for="input-shipping-country">{{ entry_country }}</label>
       <select name="country_id" id="input-shipping-country" class="form-control">
         <option value="">{{ text_select }}</option>
         {% for country in countries %}
@@ -43,7 +43,7 @@
       </select>
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-shipping-zone">{{ entry_zone }}</label>
+      <label for="input-shipping-zone">{{ entry_zone }}</label>
       <!-- JS added options -->
       <select name="zone_id" id="input-shipping-zone" class="form-control"></select>
     </div>
@@ -75,11 +75,11 @@
   
       {% if custom_field.type == 'radio' %}
         <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-          <label class="col-sm-2 control-label">{{ custom_field.name }}</label>
+          <label>{{ custom_field.name }}</label>
           <div class="col-sm-10">
             <div id="input-shipping-custom-field{{ custom_field.custom_field_id }}"> 
               {% for custom_field_value in custom_field.custom_field_value %}
-                <div class="radio"> 
+                <div class="form-control"> 
                   {% if address_custom_field[custom_field.custom_field_id] and custom_field_value.custom_field_value_id == address_custom_field[custom_field.custom_field_id] %}
                   <label for="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]">{{ custom_field_value.name }}</label>
                     <input 
@@ -102,11 +102,11 @@
   
       {% if custom_field.type == 'checkbox' %}
         <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-          <label class="col-sm-2 control-label">{{ custom_field.name }}</label>
+          <label>{{ custom_field.name }}</label>
           <div class="col-sm-10">
             <div id="input-shipping-custom-field{{ custom_field.custom_field_id }}"> 
               {% for custom_field_value in custom_field.custom_field_value %}
-                <div class="checkbox"> 
+                <div class="form-control"> 
                 {% if address_custom_field[custom_field.custom_field_id] and custom_field_value.custom_field_value_id in address_custom_field[custom_field.custom_field_id] %}
                   <label>{{ custom_field_value.name }}</label>
                   <input 
@@ -132,16 +132,16 @@
   
       {% if custom_field.type == 'text' %}
         <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-          <label class="col-sm-2 control-label" for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+          <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
           <div class="col-sm-10">
-            <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control" />
+            <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
           </div>
         </div>
       {% endif %}
     
       {% if custom_field.type == 'textarea' %}
         <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-          <label class="col-sm-2 control-label" for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+          <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
           <div class="col-sm-10">
             <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control">{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}</textarea>
           </div>
@@ -150,9 +150,9 @@
     
       {% if custom_field.type == 'file' %}
         <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-          <label class="col-sm-2 control-label">{{ custom_field.name }}</label>
+          <label>{{ custom_field.name }}</label>
           <div class="col-sm-10">
-            <button type="button" id="button-shipping-custom-field{{ custom_field.custom_field_id }}" data-loading-text="{{ text_loading }}" class="btn btn-default"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+            <button type="button" id="button-shipping-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
             <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id] %}  {{ address_custom_field[custom_field.custom_field_id] }} {% endif %}" />
           </div>
         </div>
@@ -160,12 +160,12 @@
     
       {% if custom_field.type == 'date' %}
         <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-          <label class="col-sm-2 control-label" for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+          <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
           <div class="col-sm-10">
             <div class="input-group date">
-              <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control" />
+              <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
               <span class="input-group-btn">
-              <button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
+              <button type="button" class="button"><i class="icon-calendar"></i></button>
               </span></div>
           </div>
         </div>
@@ -173,12 +173,12 @@
     
       {% if custom_field.type == 'time' %}
         <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-          <label class="col-sm-2 control-label" for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+          <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
           <div class="col-sm-10">
             <div class="input-group time">
-              <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control" />
+              <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
               <span class="input-group-btn">
-                <button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
+                <button type="button" class="button"><i class="icon-calendar"></i></button>
               </span></div>
           </div>
         </div>
@@ -186,12 +186,12 @@
     
       {% if custom_field.type == 'datetime' %}
         <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-          <label class="col-sm-2 control-label" for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+          <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
           <div class="col-sm-10">
             <div class="input-group datetime">
-              <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control" />
+              <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{% if address_custom_field[custom_field.custom_field_id] %}{{ address_custom_field[custom_field.custom_field_id] }}{% else %}{{ custom_field.value }}{% endif %}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
               <span class="input-group-btn">
-              <button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
+              <button type="button" class="button"><i class="icon-calendar"></i></button>
               </span></div>
           </div>
         </div>
