--- a/catalog/view/theme/helium/template/checkout/payment_address.twig
+++ b/catalog/view/theme/helium/template/checkout/payment_address.twig
@@ -1,73 +1,71 @@
-<form class="form-horizontal">
+<form>
   {% if addresses %}
-  <div class="radio">
-    <label>
-      <input type="radio" name="payment_address" value="existing" checked="checked" />
-      {{ text_address_existing }}</label>
-  </div>
-  <div id="payment-existing">
-    <select name="address_id" class="form-control">
-     {% for address in addresses %}
-      {% if address['address_id'] == address_id %}
-      <option value="{{ address.address_id }}" selected="selected">{{ address.firstname }} {{ address.lastname }}, {{ address.address_1 }}, {{ address.city }}, {{ address.zone }}, {{ address.country }}</option>
-      {% else %}
-      <option value="{{ address.address_id }}">{{ address.firstname }} {{ address.lastname }}, {{ address.address_1 }}, {{ address.city }}, {{ address.zone }}, {{ address.country }}</option>
-      {% endif %}
-      {% endfor %}
-    </select>
-  </div>
-  <div class="radio">
-    <label>
-      <input type="radio" name="payment_address" value="new" />
-      {{ text_address_new }}</label>
-  </div>
+    <div class="form-control">
+      <input id="payment_address_existing" type="radio" name="payment_address" value="existing" checked="checked" />
+      <label for="payment_address_existing">{{ text_address_existing }}</label>
+    </div>
+    <div id="payment-existing">
+      <select name="address_id" class="form-control">
+        {% for address in addresses %}
+          {% if address['address_id'] == address_id %}
+            <option value="{{ address.address_id }}" selected="selected">{{ address.firstname }} {{ address.lastname }}, {{ address.address_1 }}, {{ address.city }}, {{ address.zone }}, {{ address.country }}</option>
+          {% else %}
+            <option value="{{ address.address_id }}">{{ address.firstname }} {{ address.lastname }}, {{ address.address_1 }}, {{ address.city }}, {{ address.zone }}, {{ address.country }}</option>
+          {% endif %}
+        {% endfor %}
+      </select>
+    </div>
+    <div class="form-control">
+      <input id="payment_address_new" type="radio" name="payment_address" value="new" />
+      <label for="payment_address_new">{{ text_address_new }}</label>
+    </div>
   {% endif %}
-  <br />
+
   <div id="payment-new" style="display: {% if addresses %}none{% else %}block{% endif %};">
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-payment-firstname">{{ entry_firstname }}</label>
+      <label for="input-payment-firstname">{{ entry_firstname }}</label>
       <div class="col-sm-10">
-        <input type="text" name="firstname" value="" placeholder="{{ entry_firstname }}" id="input-payment-firstname" class="form-control" />
+        <input type="text" name="firstname" value="" placeholder="{{ entry_firstname }}" id="input-payment-firstname" />
       </div>
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-payment-lastname">{{ entry_lastname }}</label>
+      <label for="input-payment-lastname">{{ entry_lastname }}</label>
       <div class="col-sm-10">
-        <input type="text" name="lastname" value="" placeholder="{{ entry_lastname }}" id="input-payment-lastname" class="form-control" />
+        <input type="text" name="lastname" value="" placeholder="{{ entry_lastname }}" id="input-payment-lastname" />
       </div>
     </div>
     <div class="form-group">
-      <label class="col-sm-2 control-label" for="input-payment-company">{{ entry_company }}</label>
+      <label for="input-payment-company">{{ entry_company }}</label>
       <div class="col-sm-10">
-        <input type="text" name="company" value="" placeholder="{{ entry_company }}" id="input-payment-company" class="form-control" />
+        <input type="text" name="company" value="" placeholder="{{ entry_company }}" id="input-payment-company" />
       </div>
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-payment-address-1">{{ entry_address_1 }}</label>
+      <label for="input-payment-address-1">{{ entry_address_1 }}</label>
       <div class="col-sm-10">
-        <input type="text" name="address_1" value="" placeholder="{{ entry_address_1 }}" id="input-payment-address-1" class="form-control" />
+        <input type="text" name="address_1" value="" placeholder="{{ entry_address_1 }}" id="input-payment-address-1" />
       </div>
     </div>
     <div class="form-group">
-      <label class="col-sm-2 control-label" for="input-payment-address-2">{{ entry_address_2 }}</label>
+      <label for="input-payment-address-2">{{ entry_address_2 }}</label>
       <div class="col-sm-10">
-        <input type="text" name="address_2" value="" placeholder="{{ entry_address_2 }}" id="input-payment-address-2" class="form-control" />
+        <input type="text" name="address_2" value="" placeholder="{{ entry_address_2 }}" id="input-payment-address-2" />
       </div>
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-payment-city">{{ entry_city }}</label>
+      <label for="input-payment-city">{{ entry_city }}</label>
       <div class="col-sm-10">
-        <input type="text" name="city" value="" placeholder="{{ entry_city }}" id="input-payment-city" class="form-control" />
+        <input type="text" name="city" value="" placeholder="{{ entry_city }}" id="input-payment-city" />
       </div>
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-payment-postcode">{{ entry_postcode }}</label>
+      <label for="input-payment-postcode">{{ entry_postcode }}</label>
       <div class="col-sm-10">
-        <input type="text" name="postcode" value="" placeholder="{{ entry_postcode }}" id="input-payment-postcode" class="form-control" />
+        <input type="text" name="postcode" value="" placeholder="{{ entry_postcode }}" id="input-payment-postcode" />
       </div>
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-payment-country">{{ entry_country }}</label>
+      <label for="input-payment-country">{{ entry_country }}</label>
       <div class="col-sm-10">
         <select name="country_id" id="input-payment-country" class="form-control">
           <option value="">{{ text_select }}</option>
@@ -82,7 +80,7 @@
       </div>
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-payment-zone">{{ entry_zone }}</label>
+      <label for="input-payment-zone">{{ entry_zone }}</label>
       <div class="col-sm-10">
         <select name="zone_id" id="input-payment-zone" class="form-control">
         </select>
@@ -91,7 +89,7 @@
     {% for custom_field in custom_fields %}
     {% if custom_field.type == 'select' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label" for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
       <div class="col-sm-10">
         <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">
           <option value="">{{ text_select }}</option>
@@ -104,11 +102,11 @@
     {% endif %}
     {% if custom_field.type == 'radio' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label">{{ custom_field.name }}</label>
+      <label>{{ custom_field.name }}</label>
       <div class="col-sm-10">
         <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
           {% for custom_field_value in custom_field.custom_field_value %}
-          <div class="radio">
+          <div class="form-control">
             <label>
               <input type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
               {{ custom_field_value.name }}</label>
@@ -120,11 +118,11 @@
     {% endif %}
     {% if custom_field.type == 'checkbox' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label">{{ custom_field.name }}</label>
+      <label>{{ custom_field.name }}</label>
       <div class="col-sm-10">
         <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
           {% for custom_field_value in custom_field.custom_field_value %}
-          <div class="checkbox">
+          <div class="form-control">
             <label>
               <input type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" />
               {{ custom_field_value.name }}</label>
@@ -136,15 +134,15 @@
     {% endif %}
     {% if custom_field.type == 'text' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label" for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
       <div class="col-sm-10">
-        <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control" />
+        <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
       </div>
     </div>
     {% endif %}
     {% if custom_field.type == 'textarea' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label" for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
       <div class="col-sm-10">
         <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">{{ custom_field.value }}</textarea>
       </div>
@@ -152,45 +150,45 @@
     {% endif %}
     {% if custom_field.type == 'file' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label">{{ custom_field.name }}</label>
+      <label>{{ custom_field.name }}</label>
       <div class="col-sm-10">
-        <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}" data-loading-text="{{ text_loading }}" class="btn btn-default"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+        <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
         <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
       </div>
     </div>
     {% endif %}
     {% if custom_field.type == 'date' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label" for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
       <div class="col-sm-10">
         <div class="input-group date">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control" />
+          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
           <span class="input-group-btn">
-          <button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
+          <button type="button" class="button"><i class="icon-calendar"></i></button>
           </span></div>
       </div>
     </div>
     {% endif %}
     {% if custom_field.type == 'time' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label" for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
       <div class="col-sm-10">
         <div class="input-group time">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control" />
+          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
           <span class="input-group-btn">
-          <button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
+          <button type="button" class="button"><i class="icon-calendar"></i></button>
           </span></div>
       </div>
     </div>
     {% endif %}
     {% if custom_field.type == 'time' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label" for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
       <div class="col-sm-10">
         <div class="input-group datetime">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control" />
+          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
           <span class="input-group-btn">
-          <button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
+          <button type="button" class="button"><i class="icon-calendar"></i></button>
           </span></div>
       </div>
     </div>
@@ -199,7 +197,7 @@
   </div>
   <div class="buttons clearfix">
     <div class="pull-right">
-      <input type="button" value="{{ button_continue }}" id="button-payment-address" data-loading-text="{{ text_loading }}" class="btn btn-primary" />
+      <button type="button" id="button-payment-address" class="primary">{{ button_continue }}</button>
     </div>
   </div>
 </form>
