--- a/catalog/view/theme/helium/template/checkout/shipping_address.twig
+++ b/catalog/view/theme/helium/template/checkout/shipping_address.twig
@@ -1,6 +1,6 @@
-<form class="form-horizontal">
+<form>
   {% if addresses %}
-  <div class="radio">
+  <div class="form-control">
     <label>
       <input type="radio" name="shipping_address" value="existing" checked="checked" />
       {{ text_address_existing }}</label>
@@ -16,7 +16,7 @@
       {% endfor %}
     </select>
   </div>
-  <div class="radio">
+  <div class="form-control">
     <label>
       <input type="radio" name="shipping_address" value="new" />
       {{ text_address_new }}</label>
@@ -25,49 +25,49 @@
   <br />
   <div id="shipping-new" style="display: {% if addresses %}none{% else %}block{% endif %};">
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-shipping-firstname">{{ entry_firstname }}</label>
+      <label for="input-shipping-firstname">{{ entry_firstname }}</label>
       <div class="col-sm-10">
-        <input type="text" name="firstname" value="" placeholder="{{ entry_firstname }}" id="input-shipping-firstname" class="form-control" />
+        <input type="text" name="firstname" value="" placeholder="{{ entry_firstname }}" id="input-shipping-firstname" />
       </div>
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-shipping-lastname">{{ entry_lastname }}</label>
+      <label for="input-shipping-lastname">{{ entry_lastname }}</label>
       <div class="col-sm-10">
-        <input type="text" name="lastname" value="" placeholder="{{ entry_lastname }}" id="input-shipping-lastname" class="form-control" />
+        <input type="text" name="lastname" value="" placeholder="{{ entry_lastname }}" id="input-shipping-lastname" />
       </div>
     </div>
     <div class="form-group">
-      <label class="col-sm-2 control-label" for="input-shipping-company">{{ entry_company }}</label>
+      <label for="input-shipping-company">{{ entry_company }}</label>
       <div class="col-sm-10">
-        <input type="text" name="company" value="" placeholder="{{ entry_company }}" id="input-shipping-company" class="form-control" />
+        <input type="text" name="company" value="" placeholder="{{ entry_company }}" id="input-shipping-company" />
       </div>
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-shipping-address-1">{{ entry_address_1 }}</label>
+      <label for="input-shipping-address-1">{{ entry_address_1 }}</label>
       <div class="col-sm-10">
-        <input type="text" name="address_1" value="" placeholder="{{ entry_address_1 }}" id="input-shipping-address-1" class="form-control" />
+        <input type="text" name="address_1" value="" placeholder="{{ entry_address_1 }}" id="input-shipping-address-1" />
       </div>
     </div>
     <div class="form-group">
-      <label class="col-sm-2 control-label" for="input-shipping-address-2">{{ entry_address_2 }}</label>
+      <label for="input-shipping-address-2">{{ entry_address_2 }}</label>
       <div class="col-sm-10">
-        <input type="text" name="address_2" value="" placeholder="{{ entry_address_2 }}" id="input-shipping-address-2" class="form-control" />
+        <input type="text" name="address_2" value="" placeholder="{{ entry_address_2 }}" id="input-shipping-address-2" />
       </div>
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-shipping-city">{{ entry_city }}</label>
+      <label for="input-shipping-city">{{ entry_city }}</label>
       <div class="col-sm-10">
-        <input type="text" name="city" value="" placeholder="{{ entry_city }}" id="input-shipping-city" class="form-control" />
+        <input type="text" name="city" value="" placeholder="{{ entry_city }}" id="input-shipping-city" />
       </div>
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-shipping-postcode">{{ entry_postcode }}</label>
+      <label for="input-shipping-postcode">{{ entry_postcode }}</label>
       <div class="col-sm-10">
-        <input type="text" name="postcode" value="{{ postcode }}" placeholder="{{ entry_postcode }}" id="input-shipping-postcode" class="form-control" />
+        <input type="text" name="postcode" value="{{ postcode }}" placeholder="{{ entry_postcode }}" id="input-shipping-postcode" />
       </div>
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-shipping-country">{{ entry_country }}</label>
+      <label for="input-shipping-country">{{ entry_country }}</label>
       <div class="col-sm-10">
         <select name="country_id" id="input-shipping-country" class="form-control">
           <option value="">{{ text_select }}</option>
@@ -82,7 +82,7 @@
       </div>
     </div>
     <div class="form-group required">
-      <label class="col-sm-2 control-label" for="input-shipping-zone">{{ entry_zone }}</label>
+      <label for="input-shipping-zone">{{ entry_zone }}</label>
       <div class="col-sm-10">
         <select name="zone_id" id="input-shipping-zone" class="form-control">
         </select>
@@ -91,7 +91,7 @@
    {% for custom_field in custom_fields %}
     {% if custom_field.type == 'select' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label" for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
       <div class="col-sm-10">
         <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control">
           <option value="">{{ text_select }}</option>
@@ -104,11 +104,11 @@
     {% endif %}
     {% if custom_field.type == 'radio' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label">{{ custom_field.name }}</label>
+      <label>{{ custom_field.name }}</label>
       <div class="col-sm-10">
         <div id="input-shipping-custom-field{{ custom_field.custom_field_id }}">
           {% for custom_field_value in custom_field.custom_field_value %}
-          <div class="radio">
+          <div class="form-control">
             <label>
               <input type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
               {{ custom_field_value.name }}</label>
@@ -120,11 +120,11 @@
     {% endif %}
     {% if custom_field.type == 'checkbox' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label">{{ custom_field.name }}</label>
+      <label>{{ custom_field.name }}</label>
       <div class="col-sm-10">
         <div id="input-shipping-custom-field{{ custom_field.custom_field_id }}">
           {% for custom_field_value in custom_field.custom_field_value %}
-          <div class="checkbox">
+          <div class="form-control">
             <label>
               <input type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" />
               {{ custom_field_value.name }}</label>
@@ -136,15 +136,15 @@
     {% endif %}
     {% if custom_field.type == 'text' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label" for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
       <div class="col-sm-10">
-        <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control" />
+        <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
       </div>
     </div>
     {% endif %}
     {% if custom_field.type == 'textarea' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label" for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
       <div class="col-sm-10">
         <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control">{{ custom_field.value }}</textarea>
       </div>
@@ -152,45 +152,45 @@
     {% endif %}
     {% if custom_field.type == 'file' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label">{{ custom_field.name }}</label>
+      <label>{{ custom_field.name }}</label>
       <div class="col-sm-10">
-        <button type="button" id="button-shipping-custom-field{{ custom_field.custom_field_id }}" data-loading-text="{{ text_loading }}" class="btn btn-default"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+        <button type="button" id="button-shipping-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
         <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
       </div>
     </div>
     {% endif %}
     {% if custom_field.type == 'date' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label" for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
       <div class="col-sm-10">
         <div class="input-group date">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control" />
+          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
           <span class="input-group-btn">
-          <button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
+          <button type="button" class="button"><i class="icon-calendar"></i></button>
           </span></div>
       </div>
     </div>
     {% endif %}
     {% if custom_field.type == 'time' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label" for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
       <div class="col-sm-10">
         <div class="input-group time">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control" />
+          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
           <span class="input-group-btn">
-          <button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
+          <button type="button" class="button"><i class="icon-calendar"></i></button>
           </span></div>
       </div>
     </div>
     {% endif %}
     {% if custom_field.type == 'datetime' %}
     <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-      <label class="col-sm-2 control-label" for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+      <label for="input-shipping-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
       <div class="col-sm-10">
         <div class="input-group datetime">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" class="form-control" />
+          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-shipping-custom-field{{ custom_field.custom_field_id }}" />
           <span class="input-group-btn">
-          <button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
+          <button type="button" class="button"><i class="icon-calendar"></i></button>
           </span></div>
       </div>
     </div>
@@ -199,7 +199,7 @@
   </div>
   <div class="buttons clearfix">
     <div class="pull-right">
-      <input type="button" value="{{ button_continue }}" id="button-shipping-address" data-loading-text="{{ text_loading }}" class="btn btn-primary" />
+      <button type="button" id="button-shipping-address" class="primary">{{ button_continue }}</button>
     </div>
   </div>
 </form>
