--- a/catalog/view/theme/helium/template/common/cart_select_options.twig
+++ b/catalog/view/theme/helium/template/common/cart_select_options.twig
@@ -13,7 +13,7 @@
         {% include 'helium/template/product/product_page_options.twig' with {options: options} %}
       {% endif %}
       <div class="form-group">
-        <label class="control-label" for="input-quantity">{{ entry_qty }}</label>
+        <label for="input-quantity">{{ entry_qty }}</label>
         <input 
           type="number" 
           name="quantity" 
