--- a/catalog/view/theme/helium/template/common/currency.twig
+++ b/catalog/view/theme/helium/template/common/currency.twig
@@ -3,7 +3,7 @@
     <div class="btn-group">
       <button class="dropdown-toggle" data-toggle="dropdown" type="button">{% for currency in currencies %}
       {% if currency.symbol_left and currency.code == code %} <strong>{{ currency.symbol_left }}</strong> {% elseif currency.symbol_right and currency.code == code %} <strong>{{ currency.symbol_right }}</strong> {% endif %}
-      {% endfor %} <span class="">{{ text_currency }}</span>&nbsp;<i class="fa fa-caret-down"></i></button>
+      {% endfor %} <span class="">{{ text_currency }}</span>&nbsp;<i class="icon-chevron-down"></i></button>
       <div class="dropdown-menu">
         {% for currency in currencies %}
         {% if currency.symbol_left %}
