--- a/catalog/view/theme/helium/template/common/success.twig
+++ b/catalog/view/theme/helium/template/common/success.twig
@@ -7,7 +7,7 @@
       <h1>{{ heading_title }}</h1>
       {{ text_message }}
       <div class="row">
-        <a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a>
+        <a href="{{ continue }}" class="primary">{{ button_continue }}</a>
       </div>
     </div>
   </div>
