--- a/catalog/view/theme/helium/template/extension/payment/cod.twig
+++ b/catalog/view/theme/helium/template/extension/payment/cod.twig
@@ -1,6 +1,7 @@
 <div class="buttons">
   <div class="pull-right">
-    <input type="button" value="{{ button_confirm }}" id="button-confirm" data-loading-text="{{ text_loading }}" class="btn btn-primary" />
+	ololo
+    <input type="button" value="{{ button_confirm }}" id="button-confirm" class="primary" />
   </div>
 </div>
 <script type="text/javascript"><!--
