--- a/catalog/view/theme/helium/template/extension/payment/liqpay.twig
+++ b/catalog/view/theme/helium/template/extension/payment/liqpay.twig
@@ -3,7 +3,7 @@
   <input type="hidden" name="signature" value="{{ signature }}">
   <div class="buttons">
     <div class="pull-right">
-      <input type="submit" value="{{ button_confirm }}" class="btn btn-primary" />
+      <button type="submit" class="primary">{{ button_confirm }}</button>
     </div>
   </div>
 </form>
