--- a/catalog/view/theme/helium/template/extension/total/shipping.twig
+++ b/catalog/view/theme/helium/template/extension/total/shipping.twig
@@ -1,13 +1,13 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h4 class="panel-title"><a href="#collapse-shipping" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">{{ heading_title }} <i class="fa fa-caret-down"></i></a></h4>
+    <h4 class="panel-title"><a href="#collapse-shipping" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">{{ heading_title }} <i class="icon-chevron-down"></i></a></h4>
   </div>
   <div id="collapse-shipping" class="panel-collapse collapse">
     <div class="panel-body">
       <p>{{ text_shipping }}</p>
-      <div class="form-horizontal">
+      <div >
         <div class="form-group required">
-          <label class="col-sm-2 control-label" for="input-country">{{ entry_country }}</label>
+          <label for="input-country">{{ entry_country }}</label>
           <div class="col-sm-10">
             <select name="country_id" id="input-country" class="form-control">
               <option value="">{{ text_select }}</option>
@@ -22,19 +22,19 @@
           </div>
         </div>
         <div class="form-group required">
-          <label class="col-sm-2 control-label" for="input-zone">{{ entry_zone }}</label>
+          <label for="input-zone">{{ entry_zone }}</label>
           <div class="col-sm-10">
             <select name="zone_id" id="input-zone" class="form-control">
             </select>
           </div>
         </div>
         <div class="form-group required">
-          <label class="col-sm-2 control-label" for="input-postcode">{{ entry_postcode }}</label>
+          <label for="input-postcode">{{ entry_postcode }}</label>
           <div class="col-sm-10">
-            <input type="text" name="postcode" value="{{ postcode }}" placeholder="{{ entry_postcode }}" id="input-postcode" class="form-control" />
+            <input type="text" name="postcode" value="{{ postcode }}" placeholder="{{ entry_postcode }}" id="input-postcode" />
           </div>
         </div>
-        <button type="button" id="button-quote" data-loading-text="{{ text_loading }}" class="btn btn-primary">{{ button_quote }}</button>
+        <button type="button" id="button-quote" class="primary">{{ button_quote }}</button>
       </div>
       <script type="text/javascript"><!--
 $('#button-quote').on('click', function() {
@@ -88,7 +88,7 @@ $('#button-quote').on('click', function() {
 
 					if (!json['shipping_method'][i]['error']) {
 						for (j in json['shipping_method'][i]['quote']) {
-							html += '<div class="radio">';
+							html += '<div class="form-control">';
 							html += '  <label>';
 
 							if (json['shipping_method'][i]['quote'][j]['code'] == '{{ shipping_method }}') {
@@ -109,9 +109,9 @@ $('#button-quote').on('click', function() {
 				html += '        <button type="button" class="btn btn-default" data-dismiss="modal">{{ button_cancel }}</button>';
 
 				{% if shipping_method %}
-				html += '        <input type="button" value="{{ button_shipping }}" id="button-shipping" data-loading-text="{{ text_loading }}" class="btn btn-primary" />';
+				html += '        <input type="button" value="{{ button_shipping }}" id="button-shipping" class="primary" />';
 				{% else %}
-				html += '        <input type="button" value="{{ button_shipping }}" id="button-shipping" data-loading-text="{{ text_loading }}" class="btn btn-primary" disabled="disabled" />';
+				html += '        <input type="button" value="{{ button_shipping }}" id="button-shipping" class="primary" disabled="disabled" />';
 				{% endif %}
 
 				html += '      </div>';
