--- a/catalog/view/theme/helium/template/extension/total/voucher.twig
+++ b/catalog/view/theme/helium/template/extension/total/voucher.twig
@@ -1,15 +1,16 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h4 class="panel-title"><a href="#collapse-voucher" data-toggle="collapse" data-parent="#accordion" class="accordion-toggle">{{ heading_title }} <i class="fa fa-caret-down"></i></a></h4>
+    <h4 class="panel-title"><a href="#collapse-voucher" data-toggle="collapse" data-parent="#accordion" class="accordion-toggle">{{ heading_title }} <i class="icon-chevron-down"></i></a></h4>
   </div>
   <div id="collapse-voucher" class="panel-collapse collapse">
     <div class="panel-body">
-      <label class="col-sm-2 control-label" for="input-voucher">{{ entry_voucher }}</label>
+      <label for="input-voucher">{{ entry_voucher }}</label>
       <div class="input-group">
-        <input type="text" name="voucher" value="{{ voucher }}" placeholder="{{ entry_voucher }}" id="input-voucher" class="form-control" />
+        <input type="text" name="voucher" value="{{ voucher }}" placeholder="{{ entry_voucher }}" id="input-voucher" />
         <span class="input-group-btn">
-        <input type="submit" value="{{ button_voucher }}" id="button-voucher" data-loading-text="{{ text_loading }}"  class="btn btn-primary" />
-        </span> </div>
+        	<button type="submit" id="button-voucher" class="primary">{{ button_voucher }}</button>
+        </span>
+		</div>
       <script type="text/javascript"><!--
 $('#button-voucher').on('click', function() {
 	$.ajax({
