--- a/catalog/view/theme/helium/template/information/contact.twig
+++ b/catalog/view/theme/helium/template/information/contact.twig
@@ -1,6 +1,6 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
-<main id="information-contact" class="container">
+<main id="information-contact">
   {{ content_top }}
   <h1>{{ heading_title }}</h1>
   <h3>{{ text_location }}</h3>
@@ -15,7 +15,7 @@
               {{ address }}
               </address>
               {% if geocode %}
-              <a href="https://maps.google.com/maps?q={{ geocode|url_encode }}&hl={{ geocode_hl }}&t=m&z=15" target="_blank" class="btn btn-info"><i class="fa fa-map-marker"></i> {{ button_map }}</a>
+              <a href="https://maps.google.com/maps?q={{ geocode|url_encode }}&hl={{ geocode_hl }}&t=m&z=15" target="_blank" class="btn btn-info"><i class="icon-location"></i> {{ button_map }}</a>
               {% endif %}
             </div>
             <div class="col-sm-3"><strong>{{ text_telephone }}</strong><br>
@@ -46,7 +46,7 @@
         {% for location in locations %}
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h4 class="panel-title"><a href="#collapse-location{{ location.location_id }}" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">{{ location.name }} <i class="fa fa-caret-down"></i></a></h4>
+            <h4 class="panel-title"><a href="#collapse-location{{ location.location_id }}" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">{{ location.name }} <i class="icon-chevron-down"></i></a></h4>
           </div>
           <div class="panel-collapse collapse" id="collapse-location{{ location.location_id }}">
             <div class="panel-body">
@@ -59,7 +59,7 @@
                   {{ location.address }}
                   </address>
                   {% if location.geocode %}
-                  <a href="https://maps.google.com/maps?q={{ location.geocode|url_encode }}&hl={{ geocode_hl }}&t=m&z=15" target="_blank" class="btn btn-info"><i class="fa fa-map-marker"></i> {{ button_map }}</a>
+                  <a href="https://maps.google.com/maps?q={{ location.geocode|url_encode }}&hl={{ geocode_hl }}&t=m&z=15" target="_blank" class="btn btn-info"><i class="icon-location"></i> {{ button_map }}</a>
                   {% endif %}
                 </div>
                 <div class="col-sm-3"> <strong>{{ text_telephone }}</strong><br/>
@@ -88,29 +88,29 @@
         {% endfor %}
       </div>
       {% endif %}
-      <form action="{{ action }}" method="post" enctype="multipart/form-data" class="form-horizontal">
+      <form action="{{ action }}" method="post" enctype="multipart/form-data" >
         <fieldset>
           <legend>{{ text_contact }}</legend>
           <div class="form-group required">
-            <label class="col-sm-2 control-label" for="input-name">{{ entry_name }}</label>
+            <label for="input-name">{{ entry_name }}</label>
             <div class="col-sm-10">
-              <input type="text" name="name" value="{{ name }}" id="input-name" class="form-control" />
+              <input type="text" name="name" value="{{ name }}" id="input-name" />
               {% if error_name %}
               <div class="text-danger">{{ error_name }}</div>
               {% endif %}
             </div>
           </div>
           <div class="form-group required">
-            <label class="col-sm-2 control-label" for="input-email">{{ entry_email }}</label>
+            <label for="input-email">{{ entry_email }}</label>
             <div class="col-sm-10">
-              <input type="text" name="email" value="{{ email }}" id="input-email" class="form-control" />
+              <input type="text" name="email" value="{{ email }}" id="input-email" />
               {% if error_email %}
               <div class="text-danger">{{ error_email }}</div>
               {% endif %}
             </div>
           </div>
           <div class="form-group required">
-            <label class="col-sm-2 control-label" for="input-enquiry">{{ entry_enquiry }}</label>
+            <label for="input-enquiry">{{ entry_enquiry }}</label>
             <div class="col-sm-10">
               <textarea name="enquiry" rows="10" id="input-enquiry" class="form-control">{{ enquiry }}</textarea>
               {% if error_enquiry %}
@@ -122,7 +122,7 @@
         </fieldset>
         <div class="buttons">
           <div class="pull-right">
-            <input class="btn btn-primary" type="submit" value="{{ button_submit }}" />
+            <input type="submit" class="primary"  value="{{ button_submit }}" />
           </div>
         </div>
       </form>
