--- a/catalog/view/theme/helium/template/product/compare.twig
+++ b/catalog/view/theme/helium/template/product/compare.twig
@@ -1,7 +1,7 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 {{ content_top }}
-<main id="product-compare" class="container">
+<main id="product-compare">
  
   {% if success %}
     <div class="success">
