--- a/catalog/view/theme/helium/template/product/manufacturer_info.twig
+++ b/catalog/view/theme/helium/template/product/manufacturer_info.twig
@@ -1,14 +1,14 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 {{ content_top }}
-<main id="product-manufacturer" class="container">
+<main id="product-manufacturer">
   <h1>{{ heading_title }}</h1>
 
 
       {% if products %}
         <div class="row category-sort">
           <div class="input-group">
-            <label class="input-group-addon" for="input-sort">{{ text_sort }}</label>
+            <label for="input-sort">{{ text_sort }}</label>
             <select id="input-sort" class="form-control" onchange="location = this.value;">
             {% for sorts in sorts %}
               {% if sorts.value == '%s-%s'|format(sort, order) %}
@@ -34,7 +34,7 @@
       {% else %}
         <p>{{ text_empty }}</p>
         <div class="buttons">
-          <div class="pull-right"><a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a></div>
+          <div class="pull-right"><a href="{{ continue }}" class="primary">{{ button_continue }}</a></div>
         </div>
       {% endif %}
 </main>
