--- a/catalog/view/theme/helium/template/product/product_page_options.twig
+++ b/catalog/view/theme/helium/template/product/product_page_options.twig
@@ -4,7 +4,7 @@
 {# Выпадающий список #}
   {% if option.type == 'select' %}
     <div class="form-group{% if option.required %} required {% endif %}">
-      <h4 class="control-label" for="input-option_{{ option.product_option_id }}">{{ option.name }}</h4>
+      <h4 for="input-option_{{ option.product_option_id }}">{{ option.name }}</h4>
       <select 
         id="input-option_{{ option.product_option_id }}" 
         name="option[{{ option.product_option_id }}]" 
@@ -35,10 +35,10 @@
   {% if option.type == 'radio' %}
   {# Радио кнопки #}
   <div class="form-group {% if option.required %} required {% endif %}">
-    <h4 class="control-label">{{ option.name }}</h4>
+    <h4>{{ option.name }}</h4>
     <div id="input-option_{{ option.product_option_id }}">
       {% for option_value in option.product_option_value %}
-        <div class="radio">
+        <div class="form-control">
           <input 
             class="product-option" 
             type="radio" 
@@ -79,10 +79,10 @@
   {% if option.type == 'checkbox' %}
   {# Чекбоксы #}
   <div class="form-group{% if option.required %} required {% endif %}">
-    <h4 class="control-label">{{ option.name }}</h4>
+    <h4>{{ option.name }}</h4>
     <div id="input-option_{{ option.product_option_id }}"> 
       {% for option_value in option.product_option_value %}
-        <div class="checkbox">
+        <div class="form-control">
           <input 
             class="product-option" 
             id="product_option_{{option_value.product_option_value_id}}" 
@@ -121,19 +121,19 @@
   {% endif %}
   {% if option.type == 'text' %}
   <div class="form-group{% if option.required %} required {% endif %}">
-    <label class="control-label" for="input-option_{{ option.product_option_id }}">{{ option.name }}</label>
+    <label for="input-option_{{ option.product_option_id }}">{{ option.name }}</label>
     <input 
       id="input-option_{{ option.product_option_id }}" 
       type="text" 
       name="option[{{ option.product_option_id }}]" 
       value="{{ option.value }}" 
       placeholder="{{ option.name }}" 
-      class="form-control" />
+      />
   </div>
   {% endif %}
   {% if option.type == 'textarea' %}
   <div class="form-group{% if option.required %} required {% endif %}">
-    <label class="control-label" for="input-option_{{ option.product_option_id }}">{{ option.name }}</label>
+    <label for="input-option_{{ option.product_option_id }}">{{ option.name }}</label>
     <textarea 
       id="input-option_{{ option.product_option_id }}" 
       name="option[{{ option.product_option_id }}]" 
@@ -144,8 +144,8 @@
   {% endif %}
   {% if option.type == 'file' %}
   <div class="form-group{% if option.required %} required {% endif %}">
-    <label class="control-label">{{ option.name }}</label>
-    <button type="button" id="button-upload{{ option.product_option_id }}" data-loading-text="{{ text_loading }}" class="btn btn-default btn-block"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+    <label>{{ option.name }}</label>
+    <button type="button" id="button-upload{{ option.product_option_id }}" class="btn btn-default btn-block"><i class="fa fa-upload"></i> {{ button_upload }}</button>
     <input 
       id="input-option_{{ option.product_option_id }}" 
       type="hidden" 
@@ -156,7 +156,7 @@
   {% endif %}
   {% if option.type == 'date' %}
   <div class="form-group{% if option.required %} required {% endif %}">
-    <label class="control-label" for="input-option_{{ option.product_option_id }}">{{ option.name }}</label>
+    <label for="input-option_{{ option.product_option_id }}">{{ option.name }}</label>
     <div class="input-group date">
       <input 
         id="input-option_{{ option.product_option_id }}" 
@@ -164,15 +164,15 @@
         name="option[{{ option.product_option_id }}]" 
         value="{{ option.value }}" 
         data-date-format="YYYY-MM-DD" 
-        class="form-control" />
+        />
       <span class="input-group-btn">
-      <button class="btn btn-default" type="button"><i class="fa fa-calendar"></i></button>
+      <button class="btn btn-default" type="button"><i class="icon-calendar"></i></button>
       </span></div>
   </div>
   {% endif %}
   {% if option.type == 'datetime' %}
   <div class="form-group{% if option.required %} required {% endif %}">
-    <label class="control-label" for="input-option_{{ option.product_option_id }}">{{ option.name }}</label>
+    <label for="input-option_{{ option.product_option_id }}">{{ option.name }}</label>
     <div class="input-group datetime">
       <input 
         id="input-option_{{ option.product_option_id }}" 
@@ -180,15 +180,15 @@
         name="option[{{ option.product_option_id }}]" 
         value="{{ option.value }}" 
         data-date-format="YYYY-MM-DD HH:mm" 
-        class="form-control" />
+        />
       <span class="input-group-btn">
-      <button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
+      <button type="button" class="button"><i class="icon-calendar"></i></button>
       </span></div>
   </div>
   {% endif %}
   {% if option.type == 'time' %}
   <div class="form-group{% if option.required %} required {% endif %}">
-    <label class="control-label" for="input-option_{{ option.product_option_id }}">{{ option.name }}</label>
+    <label for="input-option_{{ option.product_option_id }}">{{ option.name }}</label>
     <div class="input-group time">
       <input 
         id="input-option_{{ option.product_option_id }}" 
@@ -196,9 +196,9 @@
         name="option[{{ option.product_option_id }}]" 
         value="{{ option.value }}" 
         data-date-format="HH:mm" 
-        class="form-control" />
+        />
       <span class="input-group-btn">
-      <button type="button" class="btn btn-default"><i class="fa fa-calendar"></i></button>
+      <button type="button" class="button"><i class="icon-calendar"></i></button>
       </span></div>
   </div>
   {% endif %}
