--- a/catalog/view/theme/helium/template/product/search.twig
+++ b/catalog/view/theme/helium/template/product/search.twig
@@ -1,24 +1,15 @@
 {{ header }}
-<div id="product-search" class="container">
-  <ul class="breadcrumb">
-    {% for breadcrumb in breadcrumbs %}
-    <li><a href="{{ breadcrumb.href }}">{{ breadcrumb.text }}</a></li>
-    {% endfor %}
-  </ul>
-  <div class="row">{{ column_left }}
-    {% if column_left and column_right %}
-    {% set class = 'col-sm-6' %}
-    {% elseif column_left or column_right %}
-    {% set class = 'col-sm-9' %}
-    {% else %}
-    {% set class = 'col-sm-12' %}
-    {% endif %}
-    <div id="content" class="{{ class }}">{{ content_top }}
+{% include 'helium/template/common/breadcrumbs.twig' %}
+<main id="product-search">
+
+  {{ column_left }}
+
+    {{ content_top }}
       <h1>{{ heading_title }}</h1>
-      <label class="control-label" for="input-search">{{ entry_search }}</label>
+      <label for="input-search">{{ entry_search }}</label>
       <div class="row">
         <div class="col-sm-4">
-          <input type="text" name="search" value="{{ search }}" placeholder="{{ text_keyword }}" id="input-search" class="form-control" />
+          <input type="text" name="search" value="{{ search }}" placeholder="{{ text_keyword }}" id="input-search" />
         </div>
         <div class="col-sm-3">
           <select name="category_id" class="form-control">
@@ -47,7 +38,7 @@
           </select>
         </div>
         <div class="col-sm-3">
-          <label class="checkbox-inline">
+          <label>
             {% if sub_category %}
             <input type="checkbox" name="sub_category" value="1" checked="checked" />
             {% else %}
@@ -57,7 +48,7 @@
         </div>
       </div>
       <p>
-        <label class="checkbox-inline">
+        <label>
           {% if description %}
           <input type="checkbox" name="description" value="1" id="description" checked="checked" />
           {% else %}
@@ -65,7 +56,7 @@
           {% endif %}
           {{ entry_description }}</label>
       </p>
-      <input type="button" value="{{ button_search }}" id="button-search" class="btn btn-primary" />
+      <input type="button" value="{{ button_search }}" id="button-search" class="primary" />
       <h2>{{ text_search }}</h2>
       {% if products %}
       <div class="row">
@@ -77,7 +68,7 @@
         </div>
         <div class="col-md-4 col-xs-6">
           <div class="form-group input-group input-group-sm">
-            <label class="input-group-addon" for="input-sort">{{ text_sort }}</label>
+            <label for="input-sort">{{ text_sort }}</label>
             <select id="input-sort" class="form-control" onchange="location = this.value;">
               {% for sorts in sorts %}
               {% if sorts.value == '%s-%s'|format(sort, order) %}
@@ -91,7 +82,7 @@
         </div>
         <div class="col-md-3 col-xs-6">
           <div class="form-group input-group input-group-sm">
-            <label class="input-group-addon" for="input-limit">{{ text_limit }}</label>
+            <label for="input-limit">{{ text_limit }}</label>
             <select id="input-limit" class="form-control" onchange="location = this.value;">
               {% for limits in limits %}
               {% if limits.value == limit %}
@@ -154,9 +145,9 @@
       {% else %}
       <p>{{ text_empty }}</p>
       {% endif %}
-      {{ content_bottom }}</div>
-    {{ column_right }}</div>
-</div>
+      {{ content_bottom }}
+    {{ column_right }}
+</main>
 <script type="text/javascript"><!--
 $('#button-search').bind('click', function() {
 	url = 'index.php?route=product/search';
