--- a/catalog/view/theme/helium/template/product/special.twig
+++ b/catalog/view/theme/helium/template/product/special.twig
@@ -1,12 +1,12 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 {{ content_top }}
-<main id="special-products" class="container">
+<main id="special-products">
   <h1>{{ heading_title }}</h1>
       {% if products %}
         <div class="row category-sort">
           <div class="input-group">
-            <label class="input-group-addon" for="input-sort">{{ text_sort }}</label>
+            <label for="input-sort">{{ text_sort }}</label>
             <select id="input-sort" class="form-control" onchange="location = this.value;">
             {% for sorts in sorts %}
               {% if sorts.value == '%s-%s'|format(sort, order) %}
@@ -32,7 +32,7 @@
       {% else %}
         <p>{{ text_empty }}</p>
         <div class="buttons">
-          <div class="pull-right"><a href="{{ continue }}" class="btn btn-primary">{{ button_continue }}</a></div>
+          <div class="pull-right"><a href="{{ continue }}" class="primary">{{ button_continue }}</a></div>
         </div>
       {% endif %}
 </main>
