UPD: Minor code cleanup

--- a/catalog/view/theme/helium/css/stylesheet.css
+++ b/catalog/view/theme/helium/css/stylesheet.css
@@ -1596,80 +1596,7 @@ input#input-quantity {
 
 
 /* Pretty radio and checkboxes */
-/* Todo Clean styles of radio and checkboxes */
-
-
-/* @supports (transform: rotate(1turn)) and (opacity: 0) {
-
-    input[type="checkbox"], input[type="radio"] {
-        position: absolute;
-        opacity: 0;
-    }
-    input[type="checkbox"]+label, input[type="radio"]+label {
-        display: inline-block;
-        min-height: 1rem;
-        padding: 3px 0 3px 1.85rem;
-        position: relative;
-    }
-    input[type="checkbox"]+label::before, input[type="radio"]+label::before {
-        border: calc(2rem/16) solid var(--text-main);
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 0;
-        height: 20px;
-        width: 20px;
-        border-radius: .2rem;
-    }
-    input[type="radio"]+label::before {
-        background-color: #fff;
-        border-radius: 50%;
-    }
-    input[type="checkbox"]:focus+label::before, input[type="radio"]:focus+label::before {
-         macOS default focus, change as needed, but be sure to include focus-specific styles!
-        box-shadow: 0 0 0 calc(2rem/16) rgb(136, 184, 255);
-        outline: calc(2rem/16) solid transparent;
-    }
-    input[type="checkbox"]:checked+label::after, input[type="radio"]:checked+label::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        height: .6rem;
-        margin: 0.25rem 0;
-    }
-    input[type="checkbox"]:checked+label::after {
-        border-top: calc(2rem/10) solid var(--primary-color);
-        border-left: calc(2rem/10) solid var(--primary-color);
-        left: .45rem;
-        transform: rotate(.625turn);
-        width: .35rem;
-    }
-
-    input[type="radio"]:checked+label::after {
-        background: var(--gardient);
-        border-radius: 50%;
-        left: .25rem;
-        width: 16px;
-		height: 16px;
-		transform: rotate(.625turn)
-	}
-		input[type="radio"]:checked+label::after, input[type="checkbox"]:checked+label::after {
-		animation: scale .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    }
-    input[type="checkbox"]:disabled+label::before, input[type="radio"]:disabled+label::before {
-        border-color: var(--text-muted);
-    }
-    input[type="checkbox"]:checked:disabled+label::after {
-        border-color: var(--text-muted);
-    }
-    input[type="radio"]:checked:disabled+label::after {
-        background: var(--text-muted);
-	}
-	@keyframes scale {
-		0% {transform: scale(0) rotate(.625turn);}
-		100% {transform: scale(1) rotate(.625turn);}
-	}
-} */
+/* DONE Clean styles of radio and checkboxes */
 
 form {
 	display: grid;
