JS: completely removed jquery from checkout process

--- a/catalog/view/theme/helium/template/checkout/payment_address.twig
+++ b/catalog/view/theme/helium/template/checkout/payment_address.twig
@@ -1,4 +1,4 @@
-<form>
+<form action="index.php?route=checkout/payment_address/save" method="post" id="payment_address">
   {% if addresses %}
     <div class="form-control">
       <input id="payment_address_existing" type="radio" name="payment_address" value="existing" checked="checked" />
