--- a/catalog/view/theme/helium/template/checkout/payment_method.twig
+++ b/catalog/view/theme/helium/template/checkout/payment_method.twig
@@ -1,24 +1,26 @@
 {% if error_warning %}
-<div class="alert alert-warning alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
+  <div class="alert alert-warning alert-dismissible"><i class="fa fa-exclamation-circle"></i> {{ error_warning }}</div>
 {% endif %}
 {% if payment_methods %}
   <form action="index.php?route=checkout/payment_method/save" method="post" id="payment_method">
   <p>{{ text_payment_method }}</p>
   {% for payment_method in payment_methods %}
-  <div class="form-control">
-    <label>{% if payment_method.code == code or not code %}
-      {% set code = payment_method.code %}
-      <input type="radio" name="payment_method" value="{{ payment_method.code }}" checked="checked" />
-      {% else %}
-      <input type="radio" name="payment_method" value="{{ payment_method.code }}" />
-      {% endif %}
-      {{ payment_method.title }}
+    <div class="form-control">
+      {% if payment_method.code == code or not code %}
+        {% set code = payment_method.code %}
+          <input type="radio" name="payment_method" value="{{ payment_method.code }}" checked="checked" />
+          <label for="{{ payment_method.code }}">{{ payment_method.title }}</label>
+        {% else %}
+          <input type="radio" name="payment_method" value="{{ payment_method.code }}" id="{{ payment_method.code }}"/>
+          <label for="{{ payment_method.code }}">{{ payment_method.title }}</label>
+        {% endif %}
+        
       {% if payment_method.terms %}
-      ({{ payment_method.terms }})
-      {% endif %} </label>
-  </div>
+        ({{ payment_method.terms }})
+      {% endif %} 
+    </div>
   {% endfor %}
-  {% endif %}
+{% endif %}
   <p><strong>{{ text_comments }}</strong></p>
   <p>
     <textarea name="comment" rows="8" class="form-control">{{ comment }}</textarea>
