--- a/catalog/view/theme/helium/template/checkout/register.twig
+++ b/catalog/view/theme/helium/template/checkout/register.twig
@@ -1,4 +1,3 @@
-<div class="row">
   <form action="index.php?route=checkout/register/save" id="checkout_register" method="post">
     <fieldset id="account">
       <legend>{{ text_your_details }}</legend>
@@ -16,125 +15,160 @@
           <label for="customer_group_id">{{ customer_group.name }}</label>
         </div>
         {% endif %}
-        {% endfor %}</div>
+        {% endfor %}
+      </div>
       <div class="form-group required">
         <label for="input-payment-firstname">{{ entry_firstname }}</label>
-        <input type="text" name="firstname" value="" placeholder="{{ entry_firstname }}" id="input-payment-firstname"/>
+        <input
+          type="text"
+          name="firstname"
+          value="{{ firstname }}"
+          placeholder="{{ entry_firstname }}"
+          id="input-payment-firstname"
+          inputmode="text"
+          enterkeyhint="next"
+          autocapitalize="words"
+          minlength="3" maxlength="32"
+        />
       </div>
       <div class="form-group required">
         <label for="input-payment-lastname">{{ entry_lastname }}</label>
-        <input type="text" name="lastname" value="" placeholder="{{ entry_lastname }}" id="input-payment-lastname"/>
+        <input
+          type="text"
+          name="lastname"
+          value="{{ lastname }}"
+          placeholder="{{ entry_lastname }}"
+          id="input-payment-lastname"
+          inputmode="text"
+          enterkeyhint="next"
+          autocapitalize="words"
+          minlength="3" maxlength="32"
+        />
       </div>
       <div class="form-group required">
-        <label for="input-payment-email" for="input-payment-email">{{ entry_email }}</label>
-        <input type="text" name="email" value="" placeholder="{{ entry_email }}" id="input-payment-email"/>
+        <label for="input-payment-email">{{ entry_email }}</label>
+        <input
+          type="email"
+          name="email"
+          value="{{ email }}"
+          placeholder="{{ entry_email }}"
+          id="input-payment-email"
+          inputmode="email"
+          enterkeyhint="next"
+        />
       </div>
       <div class="form-group required">
-        <label for="input-payment-telephone" for="input-payment-telephone">{{ entry_telephone }}</label>
-        <input type="text" name="telephone" value="" placeholder="{{ entry_telephone }}" id="input-payment-telephone"/>
+        <label for="input-payment-telephone">{{ entry_telephone }}</label>
+        <input
+          type="tel"
+          name="telephone"
+          value="{{ telephone }}"
+          placeholder="{{ entry_telephone }}"
+          id="input-payment-telephone"
+          inputmode="tel"
+          enterkeyhint="send"
+          minlength="3" maxlength="32"
+        />
       </div>
       {% for custom_field in custom_fields %}
-      
-      {% if custom_field.location == 'account' %}
-      
-      {% if custom_field.type == 'select' %}
-      <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-payment-custom-field{{ custom_field.custom_field_id }}">
-          <option value="">{{ text_select }}</option>
-          {% for custom_field_value in custom_field.custom_field_value %}
-            <option value="{{ custom_field_value.custom_field_value_id }}">{{ custom_field_value.name }}</option>
-          {% endfor %}
-        </select>
-      </div>
-      {% endif %}
-      
-      {% if custom_field.type == 'radio' %}
-      <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label>{{ custom_field.name }}</label>
-        <div id="input-payment-custom-field{{ custom_field.custom_field_id }}"> {% for custom_field_value in custom_field.custom_field_value %}
-          <div class="form-control">
-            <label for="custom_field_{{ custom_field.location }}_{{ custom_field.custom_field_id }}">{{ custom_field_value.name }}</label>
-            <input id="custom_field_{{ custom_field.location }}_{{ custom_field.custom_field_id }}" type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
+        {% if custom_field.location == 'account' %}
+          {% if custom_field.type == 'select' %}
+          <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
+            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+            <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-payment-custom-field{{ custom_field.custom_field_id }}">
+              <option value="">{{ text_select }}</option>
+              {% for custom_field_value in custom_field.custom_field_value %}
+                <option value="{{ custom_field_value.custom_field_value_id }}">{{ custom_field_value.name }}</option>
+              {% endfor %}
+            </select>
           </div>
-          {% endfor %} </div>
-      </div>
-      {% endif %}
+          {% endif %}
       
-      {% if custom_field.type == 'checkbox' %}
-      <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label>{{ custom_field.name }}</label>
-        <div id="input-payment-custom-field{{ custom_field.custom_field_id }}"> {% for custom_field_value in custom_field.custom_field_value %}
-          <div class="form-control">
-            <label for="custom_field_{{ custom_field.location }}_{{ custom_field.custom_field_id }}">{{ custom_field_value.name }}</label>
-            <input id="custom_field_{{ custom_field.location }}_{{ custom_field.custom_field_id }}" type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" />
+          {% if custom_field.type == 'radio' %}
+          <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
+            <label>{{ custom_field.name }}</label>
+            <div id="input-payment-custom-field{{ custom_field.custom_field_id }}"> {% for custom_field_value in custom_field.custom_field_value %}
+              <div class="form-control">
+                <label for="custom_field_{{ custom_field.location }}_{{ custom_field.custom_field_id }}">{{ custom_field_value.name }}</label>
+                <input id="custom_field_{{ custom_field.location }}_{{ custom_field.custom_field_id }}" type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
+              </div>
+              {% endfor %} </div>
           </div>
-          {% endfor %} </div>
-      </div>
-      {% endif %}
+          {% endif %}
       
-      {% if custom_field.type == 'text' %}
-      <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}" for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}"/>
-      </div>
-      {% endif %}
+          {% if custom_field.type == 'checkbox' %}
+          <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
+            <label>{{ custom_field.name }}</label>
+            <div id="input-payment-custom-field{{ custom_field.custom_field_id }}"> {% for custom_field_value in custom_field.custom_field_value %}
+              <div class="form-control">
+                <label for="custom_field_{{ custom_field.location }}_{{ custom_field.custom_field_id }}">{{ custom_field_value.name }}</label>
+                <input id="custom_field_{{ custom_field.location }}_{{ custom_field.custom_field_id }}" type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" />
+              </div>
+              {% endfor %} </div>
+          </div>
+          {% endif %}
       
-      {% if custom_field.type == 'textarea' %}
-      <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}" for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.value }}</textarea>
-      </div>
-      {% endif %}
+          {% if custom_field.type == 'text' %}
+          <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
+            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}" for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+            <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}"/>
+          </div>
+          {% endif %}
       
-      {% if custom_field.type == 'file' %}
-      <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <br />
-        <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}"  class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
-        <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
-      </div>
-      {% endif %}
+          {% if custom_field.type == 'textarea' %}
+          <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
+            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}" for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+            <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.value }}</textarea>
+          </div>
+          {% endif %}
       
-      {% if custom_field.type == 'date' %}
-      <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <div class="input-group date">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD" id="input-payment-custom-field{{ custom_field.custom_field_id }}"/>
-          <span class="input-group-btn">
-          <button type="button" class="button"><i class="icon-calendar"></i></button>
-          </span>
-        </div>
-      </div>
-      {% endif %}
+          {% if custom_field.type == 'file' %}
+          <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
+            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+            <br />
+            <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}"  class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
+            <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
+          </div>
+          {% endif %}
       
-      {% if custom_field.type == 'time' %}
-      <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <div class="input-group time">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}"/>
-          <span class="input-group-btn">
-          <button type="button" class="button"><i class="icon-calendar"></i></button>
-          </span></div>
-      </div>
-      {% endif %}
+          {% if custom_field.type == 'date' %}
+          <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
+            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+            <div class="input-group date">
+              <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD" id="input-payment-custom-field{{ custom_field.custom_field_id }}"/>
+              <span class="input-group-btn">
+              <button type="button" class="button"><i class="icon-calendar"></i></button>
+              </span>
+            </div>
+          </div>
+          {% endif %}
       
-      {% if custom_field.type == 'datetime' %}
-      <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}" for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <div class="input-group datetime">
-          <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}"/>
-          <span class="input-group-btn">
-          <button type="button" class="button"><i class="icon-calendar"></i></button>
-          </span>
-        </div>
-      </div>
-      {% endif %}
+          {% if custom_field.type == 'time' %}
+          <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
+            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+            <div class="input-group time">
+              <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}"/>
+              <span class="input-group-btn">
+              <button type="button" class="button"><i class="icon-calendar"></i></button>
+              </span></div>
+          </div>
+          {% endif %}
       
-      {% endif %}
-      
+          {% if custom_field.type == 'datetime' %}
+          <div id="payment-custom-field{{ custom_field.custom_field_id }}" class="form-group custom-field" data-sort="{{ custom_field.sort_order }}">
+            <label for="input-payment-custom-field{{ custom_field.custom_field_id }}" for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
+            <div class="input-group datetime">
+              <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" data-date-format="YYYY-MM-DD HH:mm" id="input-payment-custom-field{{ custom_field.custom_field_id }}"/>
+              <span class="input-group-btn">
+              <button type="button" class="button"><i class="icon-calendar"></i></button>
+              </span>
+            </div>
+          </div>
+          {% endif %}
+        {% endif %}
       {% endfor %}
     </fieldset>
+
     <fieldset>
       <legend>{{ text_your_password }}</legend>
       <div class="form-group required">
@@ -184,8 +218,7 @@
       </div>
       <div class="form-group required">
         <label for="input-payment-zone">{{ entry_zone }}</label>
-        <select name="zone_id" id="input-payment-zone">
-        </select>
+        <select name="zone_id" id="input-payment-zone"></select>
       </div>
 
       {% for custom_field in custom_fields %}
@@ -291,13 +324,13 @@
     </fieldset>
   </form>
   {{ captcha }}
-</div>
-<div>
+
+<div class="form-control">
   <input type="checkbox" name="newsletter" value="1" id="newsletter" />
   <label for="newsletter">{{ entry_newsletter }}</label>
 </div>
 {% if shipping_required %}
-<div>
+<div class="form-control">
   <input type="checkbox" name="shipping_address" value="1" checked="checked" id="shipping_required" />
   <label for="shipping_required">{{ entry_shipping }}</label>
 </div>
